--- a/apps/docs/content/buttons/button.mdx
+++ b/apps/docs/content/buttons/button.mdx
@@ -2,6 +2,11 @@
 component: Button
 ---
 
+## Features & Tips
+
+- Polymorphic `render` prop can be used to compose a button with a custom trigger.
+- Compose with an anchor or a custom `Link` component by setting the `nativeButton` prop to `false`.
+
 ## Preview
 
 <Preview />
