refactor: more mdx docs

--- a/apps/docs/content/buttons/button.mdx
+++ b/apps/docs/content/buttons/button.mdx
@@ -2,12 +2,12 @@
 component: Button
 ---
 
-## Features & Tips
+### Quick tips
 
 - Polymorphic `render` prop can be used to compose a button with a custom trigger.
 - Compose with an anchor or a custom `Link` component by setting the `nativeButton` prop to `false`.
 
-## Preview
+### Preview
 
 <Preview />
 
@@ -19,18 +19,6 @@ component: Button
 
 ---
 
-## Props
+### Properties
 
 <PropsTable />
-
-## Accessibility
-
-- Built on Base UI Button with proper ARIA attributes
-- Keyboard: `Enter` and `Space` trigger click
-- Supports `aria-label` for icon-only buttons
-- `disabled` state is properly announced
-
-## See Also
-
-- [ToggleButton](/buttons/toggle-button) - Button with toggle state
-- [Base UI Button](https://base-ui.com/react/components/button) - Underlying primitive
