--- a/apps/docs/content/forms/input.mdx
+++ b/apps/docs/content/forms/input.mdx
@@ -2,7 +2,16 @@
 component: Input
 ---
 
-## Preview
+A single-line text field built on [Base UI Input](https://base-ui.com/react/components/input). Input handles label association, description text, and error states out of the box when you provide a `label` or `description` prop — otherwise it renders as a plain input with no wrapper.
+
+### Quick tips
+
+- Comes in three sizes: `small`, `medium`, and `large`. Defaults to `medium`.
+- Use `fullwidth` to stretch the input to fill its container.
+- The `ghost` variant strips visual chrome for inline or embedded use cases.
+- Pass `FieldProps` to customize the label and description wrapper independently.
+
+### Preview
 
 <Preview />
 
@@ -27,5 +36,5 @@ component: Input
 
 ## See Also
 
-- [Textarea](/forms/textarea) - Multi-line text input
-- [Form](/forms/form) - Form container with validation
+- <ComponentLink name="Textarea" /> - Multi-line text input
+- <ComponentLink name="Form" /> - Form container with validation
