--- a/apps/docs/content/overlays/sheet.mdx
+++ b/apps/docs/content/overlays/sheet.mdx
@@ -2,7 +2,15 @@
 component: Sheet
 ---
 
-## Preview
+A slide-in panel built on [Base UI Dialog](https://base-ui.com/react/components/dialog). Sheet uses the same underlying primitive as <ComponentLink name="Modal" /> but positions itself along an edge of the viewport instead of the center. Content renders inside a <ComponentLink name="Card" /> with the same structured layout slots.
+
+### Quick tips
+
+- Use the `side` prop to control which edge the sheet slides from: `top`, `right`, `bottom`, or `left`. Defaults to `right`.
+- Footer content is automatically pushed to the bottom of the panel.
+- Fine-tune internals with `RootProps`, `TriggerProps`, `PortalProps`, `BackdropProps`, and `PopupProps` — or import `SheetRoot`, `SheetTrigger`, `SheetPortal`, `SheetBackdrop`, `SheetPopup`, and `SheetClose` directly for full control over composition.
+
+### Preview
 
 <Preview />
 
@@ -27,5 +35,5 @@ component: Sheet
 
 ## See Also
 
-- [Drawer](/overlays/drawer) - Bottom sheet with drag-to-close
-- [Modal](/overlays/modal) - Centered dialog overlay
+- <ComponentLink name="Drawer" /> - Bottom sheet with drag-to-close
+- <ComponentLink name="Modal" /> - Centered dialog overlay
