--- a/apps/docs/content/overlays/toaster.mdx
+++ b/apps/docs/content/overlays/toaster.mdx
@@ -2,7 +2,15 @@
 component: Toaster
 ---
 
-## Preview
+A toast notification system built on [Base UI Toast](https://base-ui.com/react/components/toast). Toasts stack automatically with a peek effect, support swipe-to-dismiss, and auto-dismiss after a configurable duration. Use the `useToastManager` hook to trigger toasts programmatically.
+
+### Quick tips
+
+- Wrap your app in `ToastProvider` and render `<Toaster />` once at the root — then call `useToastManager().add()` anywhere.
+- Use the `position` prop to anchor toasts to the `top` or `bottom` of the viewport. Defaults to `bottom`.
+- Toasts stack with a scale and peek effect — newer toasts sit on top.
+
+### Preview
 
 <Preview />
 
@@ -26,5 +34,5 @@ component: Toaster
 
 ## See Also
 
-- [Modal](/overlays/modal) - Dialog for actions requiring user response
-- [Popover](/overlays/popover) - Floating card attached to a trigger
+- <ComponentLink name="Modal" /> - Dialog for actions requiring user response
+- <ComponentLink name="Popover" /> - Floating card attached to a trigger
