--- a/apps/docs/content/forms/switch.mdx
+++ b/apps/docs/content/forms/switch.mdx
@@ -2,7 +2,15 @@
 component: Switch
 ---
 
-## Preview
+A toggle for binary on/off settings, built on [Base UI Switch](https://base-ui.com/react/components/switch). Switch follows the same Field composition pattern as <ComponentLink name="Checkbox" /> — label, description, and layout variants all work the same way.
+
+### Quick tips
+
+- Use `reversed` and `bordered` variants just like <ComponentLink name="Checkbox" /> for consistent form layouts.
+- Fine-tune internals with `RootProps`, `ThumbProps`, and `FieldProps` — or import `SwitchRoot`, `SwitchThumb`, and `SwitchField` directly for full control over composition.
+- Best suited for settings that take effect immediately. For deferred choices, prefer <ComponentLink name="Checkbox" />.
+
+### Preview
 
 <Preview />
 
@@ -20,12 +28,12 @@ component: Switch
 
 ## Accessibility
 
-- Built on Base UI Switch with `role="switch"` and `aria-checked`
+- Built on [Base UI Switch](https://base-ui.com/react/components/switch) with `role="switch"` and `aria-checked`
 - Label and description are associated with the switch
 - Keyboard: `Space` toggles the switch state
 
 ## See Also
 
-- [Checkbox](/forms/checkbox) - Checkbox for multi-select scenarios
-- [ToggleButton](/buttons/toggle-button) - Toggle button alternative
+- <ComponentLink name="Checkbox" /> - Checkbox for multi-select scenarios
+- <ComponentLink name="ToggleButton" /> - Toggle button alternative
 - [Base UI Switch](https://base-ui.com/react/components/switch) - Underlying primitive
