--- a/apps/docs/content/layout/separator.mdx
+++ b/apps/docs/content/layout/separator.mdx
@@ -2,7 +2,14 @@
 component: Separator
 ---
 
-## Preview
+A visual divider built on [Base UI Separator](https://base-ui.com/react/components/separator). Use it to break up sections within a <ComponentLink name="Stack" /> or <ComponentLink name="Group" />.
+
+### Quick tips
+
+- Defaults to `horizontal` orientation. Set `orientation="vertical"` for side-by-side layouts.
+- Use the `shade` prop to match the separator color to your surface context.
+
+### Preview
 
 <Preview />
 
@@ -25,5 +32,5 @@ component: Separator
 
 ## See Also
 
-- [Stack](/layout/stack) - Vertical flex layout
-- [Group](/layout/group) - Horizontal flex layout
+- <ComponentLink name="Stack" /> - Vertical flex layout
+- <ComponentLink name="Group" /> - Horizontal flex layout
