--- a/apps/docs/content/overlays/modal.mdx
+++ b/apps/docs/content/overlays/modal.mdx
@@ -2,7 +2,15 @@
 component: Modal
 ---
 
-## Preview
+A centered dialog overlay built on [Base UI Dialog](https://base-ui.com/react/components/dialog). Modal traps focus, makes background content inert, and renders its body inside a <ComponentLink name="Card" /> for structured layout with `title`, `description`, `icon`, `action`, and `footer` slots.
+
+### Quick tips
+
+- Comes in four sizes: `small`, `medium`, `large`, and `xlarge`. Defaults to `medium`.
+- Pass a `trigger` prop to wire up the open/close behavior automatically, or control it yourself with `open` and `onOpenChange`.
+- Fine-tune internals with `RootProps`, `TriggerProps`, `PortalProps`, `BackdropProps`, and `PopupProps` — or import `ModalRoot`, `ModalTrigger`, `ModalPortal`, `ModalBackdrop`, and `ModalPopup` directly for full control over composition.
+
+### Preview
 
 <Preview />
 
@@ -20,7 +28,7 @@ component: Modal
 
 ## Accessibility
 
-- Built on Base UI Dialog with proper ARIA attributes
+- Built on [Base UI Dialog](https://base-ui.com/react/components/dialog) with proper ARIA attributes
 - Focus is trapped within the modal when open
 - `Escape` key closes the modal
 - Background content is inert when modal is open
@@ -28,7 +36,7 @@ component: Modal
 
 ## See Also
 
-- [Sheet](/overlays/sheet) - Slide-in panel overlay
-- [Drawer](/overlays/drawer) - Bottom sheet overlay
-- [Popover](/overlays/popover) - Floating card attached to a trigger
+- <ComponentLink name="Sheet" /> - Slide-in panel overlay
+- <ComponentLink name="Drawer" /> - Bottom sheet overlay
+- <ComponentLink name="Popover" /> - Floating card attached to a trigger
 - [Base UI Dialog](https://base-ui.com/react/components/dialog) - Underlying primitive
