docs: mdx tinkering

--- a/apps/docs/content/layout/box.mdx
+++ b/apps/docs/content/layout/box.mdx
@@ -2,10 +2,11 @@
 component: Box
 ---
 
-The foundational layout primitive. Box renders a `div` with built-in support for spacing, alignment, borders, and sizing — all via props. Every other layout component (<ComponentLink name="Stack" />, <ComponentLink name="Group" />, <ComponentLink name="Layer" />) is built on top of Box.
+The foundational layout primitive, you probably don't need to use this component directly. Box renders a `div` with built-in support for spacing, alignment, borders, and sizing — all via props. Every other layout component (<ComponentLink name="Stack" />, <ComponentLink name="Group" />, <ComponentLink name="Layer" />) is built on top of Box.
 
 ### Quick tips
 
+- You probably don't need to use this component directly. Instead, use <ComponentLink name="Stack" /> or <ComponentLink name="Group" />.
 - Use `ax` and `ay` to control `justifyContent` and `alignItems` without writing CSS.
 - Spacing props (`p`, `m`, `gap`) map to a spacing scale using CSS custom properties.
 - `fullwidth`, `fullheight`, and `fullscreen` toggle common sizing patterns.
